Add P25P1 toggle switches